<resources>
    <string name="app_name">ProjectNumber_1</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="Age">Age</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="Esay">Esay 2X2</string>
    <string name="Normal">Normal 4X4</string>
     <string name="Hard">Hard 5X5</string>


</resources>
